nav fixed with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ nav {
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 99;
 }
 
 nav li {
@@ -29,6 +30,7 @@ nav li {
 /* - - - PAGE - - - */
 section {
     height: 100vh;
+    position: relative;
 }
 
 #page1 {
@@ -55,4 +57,8 @@ section {
     margin: 0 auto;
     font-size: 80px;
     font-variant-caps: all-small-caps;
+}
+
+#name1 {
+    color: yellow;
 }
